--- a/index.html
+++ b/index.html
@@ -1,86 +1,328 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Freshers Day</title>
-  <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      background: linear-gradient(135deg, #8b0000, #b22222, #ffcc00);
-      color: gold;
-      font-family: "Poppins", sans-serif;
-      overflow: hidden;
-      text-align: center;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>You're on the Guest list! - Freshers Day 2025</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-    h1 {
-      font-size: 3em;
-      margin: 0.3em 0;
-      text-shadow: 0 0 20px gold, 0 0 40px #ffae00;
-      animation: glow 2s ease-in-out infinite alternate;
-    }
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(135deg, #c31432 0%, #240b36 100%);
+            min-height: 100vh;
+            overflow-x: hidden;
+            position: relative;
+        }
 
-    h2 {
-      font-size: 2em;
-      margin: 0.2em 0;
-      text-shadow: 0 0 15px #ffb700, 0 0 30px gold;
-    }
+        .sparkle {
+            position: absolute;
+            width: 4px;
+            height: 4px;
+            background: #ffd700;
+            border-radius: 50%;
+            animation: sparkle 2s infinite;
+            pointer-events: none;
+            box-shadow: 0 0 10px #ffd700;
+        }
 
-    p {
-      font-size: 1.5em;
-      margin: 0.4em 0;
-      color: #fff3b0;
-      text-shadow: 0 0 10px #ffcc00;
-    }
+        @keyframes sparkle {
+            0%, 100% {
+                opacity: 0;
+                transform: scale(0);
+            }
+            50% {
+                opacity: 1;
+                transform: scale(1);
+            }
+        }
 
-    @keyframes glow {
-      from { text-shadow: 0 0 10px gold, 0 0 20px #ffb300; }
-      to { text-shadow: 0 0 30px #ffe066, 0 0 60px #ffcc00; }
-    }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            position: relative;
+            z-index: 1;
+        }
 
-    .confetti {
-      position: absolute;
-      width: 10px;
-      height: 10px;
-      background: gold;
-      opacity: 0.8;
-      animation: fall 5s linear infinite;
-    }
+        .card {
+            background: rgba(255, 255, 255, 0.98);
+            border-radius: 30px;
+            padding: 60px 40px;
+            margin-top: 50px;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.4), 0 0 50px rgba(255, 215, 0, 0.3);
+            text-align: center;
+            position: relative;
+            overflow: hidden;
+            animation: fadeInUp 1s ease-out;
+            border: 3px solid #ffd700;
+        }
 
-    @keyframes fall {
-      0% {
-        transform: translateY(0) rotate(0deg);
-        opacity: 1;
-      }
-      100% {
-        transform: translateY(100vh) rotate(720deg);
-        opacity: 0;
-      }
-    }
-  </style>
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(50px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .shine {
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: linear-gradient(
+                45deg,
+                transparent,
+                rgba(255, 215, 0, 0.2),
+                transparent
+            );
+            animation: shine 3s infinite;
+        }
+
+        @keyframes shine {
+            0% {
+                transform: translateX(-100%) translateY(-100%) rotate(45deg);
+            }
+            100% {
+                transform: translateX(100%) translateY(100%) rotate(45deg);
+            }
+        }
+
+        .crown {
+            font-size: 80px;
+            margin-bottom: 20px;
+            animation: bounce 2s infinite;
+            display: inline-block;
+            filter: drop-shadow(0 0 10px #ffd700);
+        }
+
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% {
+                transform: translateY(0);
+            }
+            40% {
+                transform: translateY(-20px);
+            }
+            60% {
+                transform: translateY(-10px);
+            }
+        }
+
+        h1 {
+            background: linear-gradient(135deg, #c31432 0%, #ff6b6b 50%, #ffd700 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            font-size: 48px;
+            margin-bottom: 20px;
+            font-weight: 700;
+            animation: glow 2s ease-in-out infinite alternate;
+            filter: drop-shadow(2px 2px 4px rgba(195, 20, 50, 0.3));
+        }
+
+        @keyframes glow {
+            from {
+                filter: drop-shadow(2px 2px 4px rgba(195, 20, 50, 0.3)) drop-shadow(0 0 10px rgba(255, 215, 0, 0.3));
+            }
+            to {
+                filter: drop-shadow(2px 2px 4px rgba(195, 20, 50, 0.3)) drop-shadow(0 0 20px rgba(255, 215, 0, 0.6)) drop-shadow(0 0 30px rgba(255, 215, 0, 0.4));
+            }
+        }
+
+        .subtitle {
+            font-size: 24px;
+            color: #c31432;
+            margin-bottom: 30px;
+            font-weight: 600;
+        }
+
+        .event-details {
+            background: linear-gradient(135deg, #c31432 0%, #8b0000 100%);
+            color: #ffd700;
+            padding: 30px;
+            border-radius: 20px;
+            margin: 30px 0;
+            box-shadow: 0 10px 30px rgba(195, 20, 50, 0.5), inset 0 0 20px rgba(255, 215, 0, 0.1);
+            border: 2px solid #ffd700;
+        }
+
+        .event-details h2 {
+            font-size: 32px;
+            margin-bottom: 15px;
+            color: #ffd700;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        }
+
+        .date-time {
+            font-size: 28px;
+            font-weight: 700;
+            margin: 15px 0;
+            animation: pulse 2s infinite;
+            color: #fff;
+            text-shadow: 0 0 10px rgba(255, 215, 0, 0.8);
+        }
+
+        @keyframes pulse {
+            0%, 100% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.05);
+            }
+        }
+
+        .message {
+            font-size: 18px;
+            color: #555;
+            line-height: 1.8;
+            margin: 20px 0;
+        }
+
+        .cta-button {
+            background: linear-gradient(135deg, #c31432 0%, #8b0000 100%);
+            color: #ffd700;
+            padding: 18px 50px;
+            border: 3px solid #ffd700;
+            border-radius: 50px;
+            font-size: 20px;
+            font-weight: 600;
+            cursor: pointer;
+            margin-top: 30px;
+            box-shadow: 0 10px 30px rgba(195, 20, 50, 0.4), 0 0 20px rgba(255, 215, 0, 0.3);
+            transition: all 0.3s ease;
+            text-decoration: none;
+            display: inline-block;
+        }
+
+        .cta-button:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 15px 40px rgba(195, 20, 50, 0.6), 0 0 30px rgba(255, 215, 0, 0.5);
+            background: linear-gradient(135deg, #8b0000 0%, #c31432 100%);
+        }
+
+        .confetti {
+            position: absolute;
+            width: 10px;
+            height: 10px;
+            animation: confetti-fall 3s linear infinite;
+        }
+
+        @keyframes confetti-fall {
+            to {
+                transform: translateY(100vh) rotate(360deg);
+                opacity: 0;
+            }
+        }
+
+        .stars {
+            font-size: 40px;
+            margin: 20px 0;
+            animation: twinkle 1.5s infinite;
+        }
+
+        @keyframes twinkle {
+            0%, 100% {
+                opacity: 1;
+            }
+            50% {
+                opacity: 0.5;
+            }
+        }
+
+        @media (max-width: 768px) {
+            .card {
+                padding: 40px 20px;
+            }
+            h1 {
+                font-size: 36px;
+            }
+            .subtitle {
+                font-size: 20px;
+            }
+            .date-time {
+                font-size: 24px;
+            }
+        }
+    </style>
 </head>
 <body>
-  <h1>✨🎉 Welcome to Freshers Day 🎉✨</h1>
-  <h2>❤ You’re on the Guest List ❤</h2>
-  <p>🌟 It’s Your Time to Shine 🌟</p>
+    <div class="container">
+        <div class="card">
+            <div class="shine"></div>
+            <div class="crown">👑</div>
+            <h1>🎉 You're on the Guest list! 🎉</h1>
+            <div class="stars">✨ ⭐ ✨</div>
+            <p class="subtitle">Congratulations! You've been selected for</p>
 
-  <script>
-    // Confetti generation
-    for (let i = 0; i < 150; i++) {
-      let confetti = document.createElement("div");
-      confetti.classList.add("confetti");
-      confetti.style.left = Math.random() * 100 + "vw";
-      confetti.style.animationDuration = (3 + Math.random() * 5) + "s";
-      confetti.style.backgroundColor = Math.random() > 0.5 ? "gold" : "#ffcc00";
-      confetti.style.width = confetti.style.height = Math.random() * 8 + 4 + "px";
-      document.body.appendChild(confetti);
-    }
-  </script>
+            <div class="event-details">
+                <h2>FRESHERS DAY 2025</h2>
+                <div class="date-time">📅 November 5th, 2025</div>
+                <p style="font-size: 20px; margin-top: 15px;">Get ready for an unforgettable celebration!</p>
+            </div>
+
+            <p class="message">
+                You are cordially invited to join us for an amazing day filled with fun, 
+                entertainment, and memories that will last a lifetime. This is YOUR day to shine!
+            </p>
+
+            <p class="message" style="font-weight: 600; color: #c31432;">
+                Mark your calendar and get ready to celebrate! 🎊
+            </p>
+
+            <a href="#" class="cta-button">I'll Be There! 🎈</a>
+        </div>
+    </div>
+
+    <script>
+        // Create sparkles
+        function createSparkle() {
+            const sparkle = document.createElement('div');
+            sparkle.className = 'sparkle';
+            sparkle.style.left = Math.random() * window.innerWidth + 'px';
+            sparkle.style.top = Math.random() * window.innerHeight + 'px';
+            sparkle.style.animationDelay = Math.random() * 2 + 's';
+            document.body.appendChild(sparkle);
+
+            setTimeout(() => {
+                sparkle.remove();
+            }, 2000);
+        }
+
+        setInterval(createSparkle, 200);
+
+        // Create confetti
+        function createConfetti() {
+            const colors = ['#c31432', '#8b0000', '#ffd700', '#ffed4e', '#ff6b6b', '#dc143c'];
+            const confetti = document.createElement('div');
+            confetti.className = 'confetti';
+            confetti.style.left = Math.random() * window.innerWidth + 'px';
+            confetti.style.background = colors[Math.floor(Math.random() * colors.length)];
+            confetti.style.animationDelay = Math.random() * 3 + 's';
+            confetti.style.animationDuration = (Math.random() * 3 + 2) + 's';
+            document.body.appendChild(confetti);
+
+            setTimeout(() => {
+                confetti.remove();
+            }, 5000);
+        }
+
+        setInterval(createConfetti, 300);
+
+        // Initial burst of effects
+        window.addEventListener('load', () => {
+            for (let i = 0; i < 20; i++) {
+                setTimeout(createSparkle, i * 100);
+            }
+        });
+    </script>
 </body>
 </html>
